[package]
name = "neon_example_cant_find"
version = "0.1.0"
description = "Node.js module for Electron main process"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
